# moniker-rs

./: Cargo.toml  README.md
examples/: generate_monikers.rs  mix_monikers.rs
src/: animal.rs  lib.rs  moby.rs  moniker.rs  random.rs
